# library-fastapi

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: docker-image.yml
alembic/: env.py
alembic/versions/: 36de6327839e_create_tables_publisher_author_book.py
app/: dependencies.py  events.py  main.py  settings.py
app/db/: database.py  filters.py  models.py  schemas.py
app/routers/: authors.py  books.py  events.py  publishers.py
